--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
   
-    <title>E-Cell</title>
+    <title>Skill Enhancement</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
