--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY4xyJ78qa3SLH14_balkHCne6p-gqSQNWuw&s" title="enactus" />
+  <link rel="icon" type="image/svg+xml" href="./vidya.png" title="Vidya" />
   
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
-  <title>Skill Enhancement</title>
+  <title>VidyaVaani</title>
   
 </head>
 
